# BBL-MEJORAS-PRUEBAS

./: .env.example  .gitignore  Makefile  Procfile  README.md  docker-compose.docker-sync.yml  docker-compose.yml  docker-sync.yml  gunicorn_config.py  manage.py  mutagen.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  webpack.config.js
biblored/: middleware.py  settings.py  urls.py  wsgi.py
custom_user/: admin.py  apps.py  auth.py  forms.py  managers.py  models.py  signal_handlers.py
custom_user/migrations/: 0001_squashed_0015_auto_20190816_1527.py  0002_auto_20201204_0546.py  0003_auto_20210506_1804.py  0004_auto_20211021_0318.py
docker/caddy/: .env.example  Dockerfile
docker/django/: Dockerfile  docker-entrypoint.sh
docker/postgres/: .env.example
expositions/: apps.py  blocks.py  edit_handlers.py  editors.py  fields.py  forms.py  helpers.py  urls.py  views.py  viewsets.py  wagtail_hooks.py  widgets.py
harvester/: apps.py  common.py  context_proccessors.py  exceptions.py  helpers.py  managers.py  tasks.py  urls.py  views.py  views_api.py  wagtail_hooks.py
hide_wagtail/: admin.py  apps.py
hitcount/: __init__.py  admin.py  apps.py  managers.py  models.py  signals.py  urls.py  utils.py  views.py
instance_selector/: blocks.py  edit_handlers.py  wagtail_hooks.py  widgets.py
mega_red/: apps.py  auth.py  forms.py  middleware.py  models.py  urls.py  views.py
menus/: apps.py  models.py
resources/: admin.py  apps.py  context_processors.py  embed_custom_provider.py  fields.py  forms.py  helpers.py  managers.py  models.py  monkeypatch.py  tests.py  urls.py  validators.py  views.py  wagtail_hooks.py
search_engine/: apps.py  config.py  context_processors.py  elasticsearch.py  forms.py  models.py  tasks.py  urls.py  views.py
wagtailcache/: cache.py  wagtail_hooks.py
(+683 files in other folders)
